k8s/contactus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: contactus
spec:
  replicas: 1
  selector:
    matchLabels:
      component: contactus
  template:
    metadata:
      labels:
        component: contactus
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Djava.security.egd=file:/dev/./urandom
            - name: SPRING_PROFILES_ACTIVE
              value: default
          image: dhananjay12/fungible-contact-us-service:latest
          name: contactus
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8080
