k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - env:
        - name: EUREKA_CLIENT_ENABLED
          value: "false"
        - name: SPRING_CLOUD_KUBERNETES_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_RELOAD_ENABLED
          value: "true"
        image: dhananjay12/fungible-user-service:latest
        imagePullPolicy: Always
        name: user-service
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
          - containerPort: 8080
