k8s/zuul-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zuul
spec:
  replicas: 1
  selector:
    matchLabels:
      component: zuul
  template:
    metadata:
      labels:
        component: zuul
    spec:
      containers:
      - env:
        - name: SPRING_CLOUD_CONFIG_URI
          value: http://config-server-cluster-ip-service:8888
        - name: SPRING_EUREKA
          value: http://eureka-cluster-ip-service:8761/eureka
        image: dhananjay12/fungible/zuul-server:latest
        name: zuul
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 8050
