k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: zuul
  ports:
  - port: 8050
    targetPort: 8050
