k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: user-service
  name: user-service
spec:
  type: NodePort
  selector:
    component: user-service
    run: user-service
  ports:
  - port: 8100
    targetPort: 8080
    protocol: TCP
